--- a/backend/dfault.conf
+++ b/backend/dfault.conf
@@ -1,11 +1,17 @@
 server {
     listen 80;
+    server_name http://127.0.0.1:5000;  # Replace with your server's domain or IP
 
     location / {
-        proxy_pass http://flask_app:5000;
+        proxy_pass http://127.0.0.1:5000;  # Gunicorn is running on this port
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Optionally, for static files
+    location /static/ {
+        alias /path/to/your/flaskapp/static;
     }
 }
